--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*:focus-visible {
+  @apply outline-none ring-2 ring-indigo-600 ring-offset-2 ring-offset-transparent transition-none;
+}
